# typed_event.py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: basic.py
src/typed_event/: __init__.py  event.py
tests/: test_typed_event.py
